[gd_scene load_steps=7 format=3 uid="uid://c23yvb2ggl0qf"]

[ext_resource type="Texture2D" uid="uid://bdx56be2n6jnn" path="res://art/Cauldron.png" id="1_0v06e"]
[ext_resource type="Script" path="res://scenes/cauldron.gd" id="1_b0mv6"]
[ext_resource type="Texture2D" uid="uid://dhxuj0t3owspg" path="res://art/indicators/DownArrow.png" id="2_n6wnp"]
[ext_resource type="Texture2D" uid="uid://y07d3udok335" path="res://art/CauldronFail.png" id="3_yju4e"]
[ext_resource type="AudioStream" uid="uid://bfkb0vkbc2p5d" path="res://audio/IngredientSplash.wav" id="5_b01e5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iq0aw"]
radius = 283.0
height = 802.0

[node name="Cauldron" type="Node2D"]
script = ExtResource("1_b0mv6")

[node name="CauldronSprite" type="Sprite2D" parent="."]
position = Vector2(981, 1120)
texture = ExtResource("1_0v06e")

[node name="CauldronFailSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(978, 1113)
texture = ExtResource("3_yju4e")

[node name="DownArrow" type="Sprite2D" parent="."]
position = Vector2(968, 819)
texture = ExtResource("2_n6wnp")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(968, 1116)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_iq0aw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(960.056, 955.674)
stream = ExtResource("5_b01e5")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
